fixed text wrap in about page

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -9776,6 +9776,7 @@ span.popular-card__figure {
   margin-right: -60px;
   text-align: center;
   text-wrap: nowrap;
+  white-space: nowrap;
   font-size: 180px;
   font-style: normal;
   font-weight: 700;
